--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch>=2
-torchaudio>=2
-faster-whisper==1.0.0
+torch
+torchaudio
+torchvision
+faster-whisper
 transformers
 pandas
-setuptools>=65
+setuptools
 nltk
